# TIK

./: .gitignore  CMakeLists.txt  README.md  crc.cpp  decoder.cpp  encoder.cpp  hamming.cpp
shared/: CMakeLists.txt  bit_getter.hpp  bit_writer.hpp  crc.hpp  hamming.cpp  hamming.hpp  header.cpp  header.hpp  huffman_code.cpp  huffman_code.hpp  tik.cpp  tik.hpp  tree.cpp  tree.hpp  utils.hpp
tests/: CMakeLists.txt  huffman_shannon.cpp  utils_tests.cpp
